# condres-setting-manager

./: PKGBUILD  README.md  condres-settings-manager.kdev4
resources/icons/: CMakeLists.txt
src/: CMakeLists.txt  condres-category.desktop
src/modules/keyboard/: msm_keyboard.desktop
src/modules/language_packages/: LanguagePackagesCommon.cpp  msm_language_packages.desktop
src/modules/locale/: EnabledLocalesModel.cpp  SupportedLocalesModel.cpp  msm_locale.desktop
src/modules/mhwd/: msm_mhwd.desktop
src/modules/timedate/: msm_timedate.desktop
src/modules/users/: msm_users.desktop
src/msm/: CMakeLists.txt  MsmApplication.cpp  MsmWindow.cpp  MsmWindow.ui  condres-settings-manager.desktop  msm.qrc
src/notifier/notifier/: CMakeLists.txt  Notifier.cpp  NotifierApp.cpp  csm_notifier.desktop  csm_notifier_settings.desktop  notifier.qrc
src/notifier/notifier_kde/: CMakeLists.txt  Notifier.cpp  NotifierApp.cpp  csm_kde_notifier.desktop  csm_kde_notifier_settings.desktop  main.cpp
